cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(cmssw C CXX Fortran)

include (${CMAKE_SOURCE_DIR}/cmssw-cmake/cmake/all.cmake)
if(NOT CMAKE_COMPILER)
  set(CMAKE_COMPILER gcc)
endif()
if(${CMAKE_COMPILER} STREQUAL gcc)
  cms_find_package(gcc_cxxcompiler)
  cms_find_package(gcc_ccompiler)
endif()

set(PROJECT_CPPDEFINES -DBOOST_DISABLE_ASSERTS -DCMSSW_GIT_HASH=CMSSW_10_5_0 -DPROJECT_NAME=CMSSW -DPROJECT_VERSION=CMSSW_10_5_0)
set(PROJECT_CXXFLAGS -Wno-attributes)
set(PROJECT_CFLAGS )
set(PROJECT_FFLAGS )
set(PROJECT_LDFLAGS )
set(LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/lib)
set(INCLUDE_DIRS ${CMAKE_SOURCE_DIR})
list(APPEND INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/include)
include(CTest)
file(GLOB subdirs "*/*" EXCLUDE "cmssw-cmake")
foreach(dir ${subdirs})
  if(IS_DIRECTORY ${dir} AND EXISTS ${dir}/CMakeLists.txt)
    add_subdirectory(${dir})
  endif()
endforeach()
