add_subdirectory(SiPixelDigi)

add_subdirectory(EcalDigi)

add_subdirectory(DetId)

add_subdirectory(Phase2TrackerCluster)

add_subdirectory(Candidate)

add_subdirectory(HGCRecHit)

add_subdirectory(GEMDigi)

add_subdirectory(RPCDigi)

add_subdirectory(TrackReco)

add_subdirectory(EgammaTrackReco)

add_subdirectory(RPCRecHit)

add_subdirectory(HcalIsolatedTrack)

add_subdirectory(CaloRecHit)

add_subdirectory(TauReco)

add_subdirectory(FEDRawData)

add_subdirectory(HepMCCandidate)

add_subdirectory(CSCDigi)

add_subdirectory(PatCandidates)

add_subdirectory(EgammaCandidates)

add_subdirectory(CLHEP)

add_subdirectory(L1GlobalMuonTrigger)

add_subdirectory(VertexReco)

add_subdirectory(DTDigi)

add_subdirectory(HLTReco)

add_subdirectory(MuonData)

add_subdirectory(L1CaloTrigger)

add_subdirectory(Scalers)

add_subdirectory(Luminosity)

add_subdirectory(TrajectorySeed)

add_subdirectory(L1GlobalTrigger)

add_subdirectory(FWLite)

add_subdirectory(GEMRecHit)

add_subdirectory(HcalDetId)

add_subdirectory(SiPixelDetId)

add_subdirectory(TrackerCommon)

add_subdirectory(GeometryCommonDetAlgo)

add_subdirectory(CaloTowers)

add_subdirectory(StdDictionaries)

add_subdirectory(CSCRecHit)

add_subdirectory(TrackCandidate)

add_subdirectory(BTauReco)

add_subdirectory(L1GlobalCaloTrigger)

add_subdirectory(WrappedStdDictionaries)

add_subdirectory(Math)

add_subdirectory(SiStripCluster)

add_subdirectory(ParticleFlowReco)

add_subdirectory(L1THGCal)

add_subdirectory(TrackingRecHit)

add_subdirectory(ParticleFlowCandidate)

add_subdirectory(MuonDetId)

add_subdirectory(TrajectoryState)

add_subdirectory(Common)

add_subdirectory(GeometryVector)

add_subdirectory(METReco)

add_subdirectory(Provenance)

add_subdirectory(Phase2TrackerDigi)

add_subdirectory(HcalDigi)

add_subdirectory(BeamSpot)

add_subdirectory(RecoCandidate)

add_subdirectory(CastorReco)

add_subdirectory(MuonReco)

add_subdirectory(ForwardDetId)

add_subdirectory(DTRecHit)

add_subdirectory(SiStripDigi)

add_subdirectory(HcalRecHit)

add_subdirectory(EcalDetId)

add_subdirectory(EcalRecHit)

add_subdirectory(GsfTrackReco)

add_subdirectory(L1CSCTrackFinder)

add_subdirectory(TrackerRecHit2D)

add_subdirectory(EgammaReco)

add_subdirectory(GeometrySurface)

add_subdirectory(JetReco)

add_subdirectory(Histograms)

add_subdirectory(SiStripDetId)

add_subdirectory(SiPixelCluster)

add_subdirectory(FTLRecHit)

add_subdirectory(L1Trigger)



set(pythondir ${CMAKE_BINARY_DIR}/python/DataFormats)

file(MAKE_DIRECTORY ${pythondir})

file(WRITE  "${pythondir}/__init__.py" "#autogenerated
import os
__path__.append(os.path.dirname(os.path.realpath(__file__)))")
# Meta-target that builds everything in this subsystem
add_custom_target(DataFormats_all)

add_dependencies(DataFormats_all
  DataFormatsSiPixelDigi
  DataFormatsEcalDigi
  DataFormatsDetId
  DataFormatsCandidate
  DataFormatsHGCRecHit
  DataFormatsGEMDigi
  DataFormatsRPCDigi
  DataFormatsTrackReco
  DataFormatsEgammaTrackReco
  DataFormatsRPCRecHit
  DataFormatsHcalIsolatedTrack
  DataFormatsCaloRecHit
  DataFormatsTauReco
  DataFormatsFEDRawData
  DataFormatsHepMCCandidate
  DataFormatsCSCDigi
  DataFormatsPatCandidates
  DataFormatsEgammaCandidates
  DataFormatsL1GlobalMuonTrigger
  DataFormatsVertexReco
  DataFormatsDTDigi
  DataFormatsHLTReco
  DataFormatsL1CaloTrigger
  DataFormatsScalers
  DataFormatsLuminosity
  DataFormatsL1GlobalTrigger
  DataFormatsFWLite
  DataFormatsGEMRecHit
  DataFormatsHcalDetId
  DataFormatsSiPixelDetId
  DataFormatsTrackerCommon
  DataFormatsGeometryCommonDetAlgo
  DataFormatsCaloTowers
  DataFormatsCSCRecHit
  DataFormatsTrackCandidate
  DataFormatsBTauReco
  DataFormatsL1GlobalCaloTrigger
  DataFormatsMath
  DataFormatsSiStripCluster
  DataFormatsParticleFlowReco
  DataFormatsL1THGCal
  DataFormatsTrackingRecHit
  DataFormatsParticleFlowCandidate
  DataFormatsMuonDetId
  DataFormatsCommon
  DataFormatsGeometryVector
  DataFormatsMETReco
  DataFormatsProvenance
  DataFormatsHcalDigi
  DataFormatsBeamSpot
  DataFormatsRecoCandidate
  DataFormatsCastorReco
  DataFormatsMuonReco
  DataFormatsForwardDetId
  DataFormatsDTRecHit
  DataFormatsSiStripDigi
  DataFormatsHcalRecHit
  DataFormatsEcalDetId
  DataFormatsEcalRecHit
  DataFormatsGsfTrackReco
  DataFormatsL1CSCTrackFinder
  DataFormatsTrackerRecHit2D
  DataFormatsEgammaReco
  DataFormatsGeometrySurface
  DataFormatsJetReco
  DataFormatsSiStripDetId
  DataFormatsSiPixelCluster
  DataFormatsFTLRecHit
  DataFormatsL1Trigger
)
