add_subdirectory(VertexReco)

add_subdirectory(SiPixelDigi)

add_subdirectory(CaloRecHit)

add_subdirectory(TrackingRecHit)

add_subdirectory(DetId)

add_subdirectory(EcalDigi)

add_subdirectory(HGCRecHit)

add_subdirectory(Candidate)

add_subdirectory(Phase2TrackerCluster)

add_subdirectory(GEMDigi)

add_subdirectory(TauReco)

add_subdirectory(FEDRawData)

add_subdirectory(RPCDigi)

add_subdirectory(RPCRecHit)

add_subdirectory(HcalIsolatedTrack)

add_subdirectory(DTDigi)

add_subdirectory(CSCDigi)

add_subdirectory(TrackReco)

add_subdirectory(HepMCCandidate)

add_subdirectory(EgammaTrackReco)

add_subdirectory(L1CaloTrigger)

add_subdirectory(Luminosity)

add_subdirectory(Scalers)

add_subdirectory(PatCandidates)

add_subdirectory(HLTReco)

add_subdirectory(MuonData)

add_subdirectory(L1GlobalTrigger)

add_subdirectory(EgammaCandidates)

add_subdirectory(L1TCorrelator)

add_subdirectory(TrajectorySeed)

add_subdirectory(CLHEP)

add_subdirectory(L1GlobalMuonTrigger)

add_subdirectory(TrackCandidate)

add_subdirectory(MuonDetId)

add_subdirectory(FWLite)

add_subdirectory(CSCRecHit)

add_subdirectory(GEMRecHit)

add_subdirectory(CaloTowers)

add_subdirectory(HGCalReco)

add_subdirectory(StdDictionaries)

add_subdirectory(HcalDetId)

add_subdirectory(SiPixelDetId)

add_subdirectory(GeometryCommonDetAlgo)

add_subdirectory(BTauReco)

add_subdirectory(TrackerCommon)

add_subdirectory(L1GlobalCaloTrigger)

add_subdirectory(GeometryVector)

add_subdirectory(JetMatching)

add_subdirectory(WrappedStdDictionaries)

add_subdirectory(Math)

add_subdirectory(Common)

add_subdirectory(SiStripCluster)

add_subdirectory(L1THGCal)

add_subdirectory(TrajectoryState)

add_subdirectory(ParticleFlowCandidate)

add_subdirectory(ParticleFlowReco)

add_subdirectory(DTRecHit)

add_subdirectory(L1TrackTrigger)

add_subdirectory(SiStripDigi)

add_subdirectory(METReco)

add_subdirectory(Provenance)

add_subdirectory(MuonReco)

add_subdirectory(ForwardDetId)

add_subdirectory(CastorReco)

add_subdirectory(Phase2TrackerDigi)

add_subdirectory(HcalDigi)

add_subdirectory(RecoCandidate)

add_subdirectory(BeamSpot)

add_subdirectory(HcalRecHit)

add_subdirectory(EcalDetId)

add_subdirectory(EcalRecHit)

add_subdirectory(JetReco)

add_subdirectory(Histograms)

add_subdirectory(GsfTrackReco)

add_subdirectory(GeometrySurface)

add_subdirectory(EgammaReco)

add_subdirectory(L1CSCTrackFinder)

add_subdirectory(SiPixelCluster)

add_subdirectory(L1TMuon)

add_subdirectory(FTLRecHit)

add_subdirectory(TrackerRecHit2D)

add_subdirectory(SiStripDetId)

add_subdirectory(L1TParticleFlow)

add_subdirectory(L1Trigger)

add_subdirectory(L1TMuonPhase2)

add_subdirectory(L1DTTrackFinder)

add_subdirectory(Scouting)

set(pythondir ${CMAKE_BINARY_DIR}/python/DataFormats)

file(MAKE_DIRECTORY ${pythondir})

file(WRITE  "${pythondir}/__init__.py" "#autogenerated
import os
__path__.append(os.path.dirname(os.path.realpath(__file__)))")
# Meta-target that builds everything in this subsystem
add_custom_target(DataFormats_all)

add_dependencies(DataFormats_all
  DataFormatsScouting
  DataFormatsL1DTTrackFinder
  DataFormatsL1TMuonPhase2
  DataFormatsVertexReco
  DataFormatsSiPixelDigi
  DataFormatsCaloRecHit
  DataFormatsTrackingRecHit
  DataFormatsDetId
  DataFormatsEcalDigi
  DataFormatsHGCRecHit
  DataFormatsCandidate
  DataFormatsGEMDigi
  DataFormatsTauReco
  DataFormatsFEDRawData
  DataFormatsRPCDigi
  DataFormatsRPCRecHit
  DataFormatsHcalIsolatedTrack
  DataFormatsDTDigi
  DataFormatsCSCDigi
  DataFormatsTrackReco
  DataFormatsHepMCCandidate
  DataFormatsEgammaTrackReco
  DataFormatsL1CaloTrigger
  DataFormatsLuminosity
  DataFormatsScalers
  DataFormatsPatCandidates
  DataFormatsHLTReco
  DataFormatsL1GlobalTrigger
  DataFormatsEgammaCandidates
  DataFormatsL1TCorrelator
  DataFormatsL1GlobalMuonTrigger
  DataFormatsTrackCandidate
  DataFormatsMuonDetId
  DataFormatsFWLite
  DataFormatsCSCRecHit
  DataFormatsGEMRecHit
  DataFormatsCaloTowers
  DataFormatsHcalDetId
  DataFormatsSiPixelDetId
  DataFormatsGeometryCommonDetAlgo
  DataFormatsBTauReco
  DataFormatsTrackerCommon
  DataFormatsL1GlobalCaloTrigger
  DataFormatsGeometryVector
  DataFormatsMath
  DataFormatsCommon
  DataFormatsSiStripCluster
  DataFormatsL1THGCal
  DataFormatsParticleFlowCandidate
  DataFormatsParticleFlowReco
  DataFormatsDTRecHit
  DataFormatsL1TrackTrigger
  DataFormatsSiStripDigi
  DataFormatsMETReco
  DataFormatsProvenance
  DataFormatsMuonReco
  DataFormatsForwardDetId
  DataFormatsCastorReco
  DataFormatsHcalDigi
  DataFormatsRecoCandidate
  DataFormatsBeamSpot
  DataFormatsHcalRecHit
  DataFormatsEcalDetId
  DataFormatsEcalRecHit
  DataFormatsJetReco
  DataFormatsGsfTrackReco
  DataFormatsGeometrySurface
  DataFormatsEgammaReco
  DataFormatsL1CSCTrackFinder
  DataFormatsSiPixelCluster
  DataFormatsL1TMuon
  DataFormatsFTLRecHit
  DataFormatsTrackerRecHit2D
  DataFormatsSiStripDetId
  DataFormatsL1TParticleFlow
  DataFormatsL1Trigger
)
