include_directories(${CMAKE_SOURCE_DIR}
${Boost_INCLUDE_DIR}
${Boost_INCLUDE_DIR}/python
${CLHEP_INCLUDE_DIR}
${CMSMD5_INCLUDE_DIR}
${EIGEN_INCLUDE_DIR}/eigen3
${FMT_INCLUDE_DIR}
${GSL_INCLUDE_DIR}
${HEPMC_INCLUDE_DIR}
${Python_INCLUDE_DIR}
${ROOT_INCLUDE_DIR}
${TBB_INCLUDE_DIRS}
${TINYXML2_INCLUDE_DIR}
${UUID_INCLUDE_DIR}
${VDT_INCLUDE_DIR}
${XZ_INCLUDE_DIR}
/usr/include
)

cms_rootdict(DataFormatsBTauReco src/classes.h src/classes_def.xml)

add_rootdict_rules(DataFormatsBTauReco)

add_library(DataFormatsBTauReco SHARED ${DataFormatsBTauReco_EXTRA_SOURCES}
  src/IsolatedTauTagInfo.cc
  src/TaggingVariable.cc
  src/TauImpactParameterInfo.cc
  src/TauMassTagInfo.cc
  src/TemplatedSoftLeptonTagInfo.cc
  src/VertexTypes.cc
)

set_target_properties(DataFormatsBTauReco PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

add_dependencies( ALL_LIBS DataFormatsBTauReco)

target_include_directories(DataFormatsBTauReco PRIVATE ${CMAKE_SOURCE_DIR})

target_include_directories(DataFormatsBTauReco PUBLIC
${Boost_INCLUDE_DIR}
${Boost_INCLUDE_DIR}/python
${CLHEP_INCLUDE_DIR}
${CMSMD5_INCLUDE_DIR}
${EIGEN_INCLUDE_DIR}/eigen3
${FMT_INCLUDE_DIR}
${GSL_INCLUDE_DIR}
${HEPMC_INCLUDE_DIR}
${Python_INCLUDE_DIR}
${ROOT_INCLUDE_DIR}
${TBB_INCLUDE_DIRS}
${TINYXML2_INCLUDE_DIR}
${UUID_INCLUDE_DIR}
${VDT_INCLUDE_DIR}
${XZ_INCLUDE_DIR}
/usr/include
)

target_link_libraries(DataFormatsBTauReco PUBLIC
${CLHEP_LIBRARIES}
DataFormatsCandidate
DataFormatsCommon
DataFormatsEgammaReco
DataFormatsGeometryCommonDetAlgo
DataFormatsGeometryVector
DataFormatsJetReco
DataFormatsMath
DataFormatsParticleFlowCandidate
DataFormatsTrackReco
DataFormatsVertexReco
FWCoreUtilities
ROOT::Core
ROOT::GenVector
ROOT::MathCore
ROOT::MathMore
ROOT::Net
ROOT::RIO
ROOT::Thread
ROOT::Tree
Threads::Threads
gsl
)


add_python_rules(DataFormats/BTauReco)

add_script_rules(DataFormats/BTauReco)

install( TARGETS DataFormatsBTauReco DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR} EXPORT stitched::)

